--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.0.1",
     "next": "^13.4.3",
     "nextra": "^2.5.2",
     "nextra-theme-docs": "^2.5.2",
