--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "export": "next export"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.0.3",
+    "@fontsource/iosevka": "^5.0.3",
     "@vercel/analytics": "^1.0.1",
     "next": "^13.4.3",
     "nextra": "^2.5.2",
