--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fontsource/inter": "^5.0.3",
     "@fontsource/iosevka": "^5.0.3",
     "@vercel/analytics": "^1.0.1",
+    "install": "^0.13.0",
     "next": "^13.4.3",
     "nextra": "^2.5.2",
     "nextra-theme-docs": "^2.5.2",
